# weekly-report-on-slack

./: README.md  pyproject.toml
src/weekly_report/: app.py
